--- a/docs/nhapmon/CT179-Quan_tri_he_thong/Thuchanh/1.md
+++ b/docs/nhapmon/CT179-Quan_tri_he_thong/Thuchanh/1.md
@@ -1,4 +1,4 @@
-# <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/03/07-22-33-54-EXPERT%20SYSTEM.png" title="" alt="EXPERT SYSTEM.png" width="50"> Buổi 1 - Quản trị hệ thống
+# <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/03/07-22-33-54-EXPERT%20SYSTEM.png" title="" alt="EXPERT SYSTEM.png" width="50"> Buổi 1. Quản trị hệ thống
 
 ::: tip 📝 ĐỀ BÀI
 
