--- a/docs/nhapmon/CT179-Quan_tri_he_thong/Thuchanh/2.md
+++ b/docs/nhapmon/CT179-Quan_tri_he_thong/Thuchanh/2.md
@@ -1,4 +1,4 @@
-# <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/03/17-20-04-53-icons8-manager.png" width="50"> Buổi 2 - Quản lý tài khoản, ổ cứng và tập tin
+# <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/03/17-20-04-53-icons8-manager.png" width="50"> Buổi 2. Quản lý tài khoản, ổ cứng và tập tin
 
 ::: tip 📝 ĐỀ BÀI
 
