--- a/docs/nhapmon/CT179-Quan_tri_he_thong/Thuchanh/4.md
+++ b/docs/nhapmon/CT179-Quan_tri_he_thong/Thuchanh/4.md
@@ -1,4 +1,4 @@
-# <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/04/26-12-06-18-NETWORK.png"> Buổi 4 - Cấu hình mạng và cài đặt `SSH`,`FTP`,`Web Server`
+# <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/04/26-12-06-18-NETWORK.png"> Buổi 4. Cấu hình mạng và cài đặt `SSH`,`FTP`,`Web Server`
 
 ::: tip 📝 ĐỀ BÀI
 
