--- a/docs/nhapmon/CT179-Quan_tri_he_thong/Thuchanh/5.md
+++ b/docs/nhapmon/CT179-Quan_tri_he_thong/Thuchanh/5.md
@@ -1,4 +1,4 @@
-# <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/05/07-12-46-11-icons8-dns.png"> Buổi 5 - `SAMBA`, `DNS` và `Firewall`
+# <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/05/07-12-46-11-icons8-dns.png"> Buổi 5. `SAMBA`, `DNS` và `Firewall`
 
 ::: tip 📝 ĐỀ BÀI
 
