--- a/docs/nhapmon/CT179-Quan_tri_he_thong/Thuchanh/6.md
+++ b/docs/nhapmon/CT179-Quan_tri_he_thong/Thuchanh/6.md
@@ -1,4 +1,4 @@
-# Buổi 6: Thực hành Nhóm <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/04/26-13-07-13-Group%20Class.png">
+# <img src="https://raw.githubusercontent.com/Zenfection/Image/master/2021/04/26-13-07-13-Group%20Class.png"> Buổi 6. Thực hành Nhóm 
 
 ::: tip 📝 ĐỀ BÀI
 
