--- a/docs/chuyennganh/CT223-Quan_ly_du_an_phan_mem/LyThuyet/1.md
+++ b/docs/chuyennganh/CT223-Quan_ly_du_an_phan_mem/LyThuyet/1.md
@@ -1,1 +1,82 @@
 # Chương 1. Giới thiệu
+
+## 1. Động cơ học quản lý dự án CNTT
+
+Báo cáo các dự án CNTT có thành tích khá kém
+
+| Lý do thất bại của dự án                                                   | Lợi ích quản lý dự án tốt                                                        |
+| -------------------------------------------------------------------------- | -------------------------------------------------------------------------------- |
+| Không được huấn luyện, thiếu kinh nghiệm của nhà quản lý dự án             | Không gây điều bất ngờ cho chủ đầu tư, khách hàng...                             |
+| Thiếu khả năng thiết lập và quản lý yêu cầu                                | Cung cấp sự tin tưởng và giảm rủi ro                                             |
+| Thiếu khả năng lãnh đạo ở một số vị trí hay tất cả vị trí                  | Lập kế hoạch, giám sát, track, và quản lí lịch biểu, tài nguyên, giá, chất lượng |
+| Thiếu khả năng nhân dạng, chứng minh bằng tài liệu và theo dõi các yêu cầu | Cho một kinh nghiệm tốt để thực hiện các dự án khác                              |
+| Các kế hoạch và quá trình lập kế hoạch kém                                 | Các thành viên được phát triểm tốt trong nhóm                                    |
+| Ước lượng nguồn lực kém                                                    |                                                                                  |
+| Văn hoá và nội quy không đồng nhất                                         |                                                                                  |
+| Thiếu sự đồng nhất giữa các đội thực hiện dự án                            |                                                                                  |
+| Sử dụng sai phương pháp                                                    |                                                                                  |
+| Sự truyền đạt thông tin không đủ, thiếu các tiền trình theo dõi và báo cáo |                                                                                  |
+
+# 
+
+## 2. Định nghĩa của một dự án
+
+::: tip Định nghĩa
+
+- Dự án có ý nghĩa là mọi công việc liên quan để tạo ra một sản phẩm hay một dịch vụ duy nhất trong một khoảng thời gian giới hạn
+
+- Dự án "Một nỗ lực tạm thời được thực hiện để tạo ra một sản phẩm hay một dịch vụ duy nhất"
+
+:::
+
+
+
+::: tip Đặc điểm của một dự án
+
+- Có mục tiêu rõ ràng và không có việc dư thừa
+
+- Kế hoạch phải được lập rõ từ đầu
+
+- Mục tiêu cụ thể phù hợp nhau 
+
+- Thời gian thực hiện phải ước tính trước, có ngày bắt đầu và kết thúc
+
+- Có ràng buộc kinh phí, thời gian và các nguồn tài nguyên
+
+- Tồn tại nhiều rủi ro
+
+- Được thực hiện bởi tổ chức cụ thể
+
+- Các cá nhân tổ chức với những nhu cầu khác nhau hay mối quan tâm liên quan
+
+- Làm việc nhóm, hợp tác hiệu quả
+
+- Công việc có chuyên môn sâu được chia ra nhiều giai đoạn
+
+- Tài nguyên của dự án bị giới hạn và thay đổi theo từng giai đoạn
+
+- Thường có quy mô lớn và phức tập
+
+:::
+
+## 3. Các ràng buộc của dự án
+
+
+
+## 5. Sự khác biệt của dự án phần mềm
+
+## 6. Một số vấn đề trong dự án phần mềm
+
+## 7. Các giai đoạn của dự án phần mềm
+
+## 8. Quản lý dự án là gì ?
+
+## 9. Các thành phần tham gia dự án
+
+## 10. Vai trò của nhà quản trị dự án
+
+## 11. Vùng kiến thức về quán lý dự án
+
+## 12. Các công cụ và kỹ thuật quản lý dự án
+
+## 13. Vòng đời của dự án
